--- a/Foundation/sv/achievements.release.json
+++ b/Foundation/sv/achievements.release.json
@@ -12,9 +12,9 @@
 		"ACH_500_POP_DESC@~2025-01-29 15:59:33": "Uppnå 500 invånare",
 		"ACH_POPULATION_500_CHALLENGE_NAME@~2024-12-20 00:21:30": "Civitas Maxima",
 		"ACH_POPULATION_500_CHALLENGE_DESC@2025-01-14 23:01:25": "Har en befolkning på 500 eller fler (Challenge-regler eller svårare)",
-		"ACH_PRODUCE_TOOLS_NAME": "Hammer Time!",
+		"ACH_PRODUCE_TOOLS_NAME": "Dags för hammare!",
 		"ACH_PRODUCE_TOOLS_DESC": "Producera verktyg",
-		"ACH_RUSTIC_CHURCH_NAME@~2025-01-29 15:59:38": "Din Första Kyrka",
+		"ACH_RUSTIC_CHURCH_NAME@~2025-01-29 15:59:38": "Din första kyrka",
 		"ACH_RUSTIC_CHURCH_DESC@~2025-01-29 15:59:41": "Bygg en rustik kyrka",
 		"ACH_BUILD_EXTENSION_NAME": "Finns det plats för en till?",
 		"ACH_BUILD_EXTENSION_DESC": "Bygg till arbetsplatsen",
@@ -22,9 +22,9 @@
 		"ACH_TRADE_ROUTE_FIRST_DESC": "Starta en handelsväg",
 		"ACH_TRADE_ROUTE_UPGRADE_2_NAME": "Hanseatisk anda",
 		"ACH_TRADE_ROUTE_UPGRADE_2_DESC": "Uppgradera alla handelsvägar minst en gång",
-		"ACH_TRADE_ROUTE_UPGRADE_5_NAME": "Merchant Prince",
+		"ACH_TRADE_ROUTE_UPGRADE_5_NAME": "Handelsprinsen",
 		"ACH_TRADE_ROUTE_UPGRADE_5_DESC@2025-01-14 22:58:01": "Uppgradera en handelsväg till nivå 5",
-		"ACH_10000_GOLD_NAME@~2025-01-29 16:01:32": "Badar i Guld",
+		"ACH_10000_GOLD_NAME@~2025-01-29 16:01:32": "Badar i guld",
 		"ACH_10000_GOLD_DESC@~2025-01-29 16:19:32": "Samla ihop 10 000 mynt",
 		"ACH_PROFIT_MONTHLY_1000000_NAME": "Kung Midas",
 		"ACH_PROFIT_MONTHLY_1000000_DESC": "Tjäna 15 000 Coins under 30 dagar",
