--- a/Foundation/sv/buildings.release.json
+++ b/Foundation/sv/buildings.release.json
@@ -41,7 +41,7 @@
 		"STONE_BRIDGE_GATE_PART": "Stenvalv",
 		"STONE_BRIDGE_METAL_GATE_PART": "Portcullis i trä",
 		"STONE_BRIDGE_ARK_PART": "Sten Rampart",
-		"STONE_BRIDGE_MACHICOLATION_PART": "Machicolation",
+		"STONE_BRIDGE_MACHICOLATION_PART": "Machikolering",
 		"STONE_BRIDGE_TOWER_PART": "Sten torn, mindre",
 		"STONE_BRIDGE_BIG_TOWER_PART": "Sten torn, Major",
 		"BRATTICE": "Gitter av trä",
@@ -234,7 +234,7 @@
 		"CASTLE_MODEST_BUTTRESS_1@~2023-12-01 22:17:39": "Blygsam stenknapp",
 		"MONASTERY_GARDEN_STORAGE@~2025-01-15 22:51:44": "Kryddgårdsstuga",
 		"KEEP_DOOR_LOW_OPEN_RIGHT@~2023-12-19 19:02:41": "Rustik nedre grind, högersidig",
-		"SOLDIER_GATHERING_LOCATION@~2024-02-28 16:14:45": "Företagets mötesplats",
+		"SOLDIER_GATHERING_LOCATION@~2024-02-28 16:14:45": "Kompaniets mötesplats",
 		"CASTLE_MODEST_DECO_ARCH_A@~2024-03-25 21:03:28": "Blygsam stenbåge",
 		"CASTLE_MODEST_DECO_COLUMN_A@~2024-03-25 21:02:38": "Blygsam stenpelare",
 		"CASTLE_MODEST_DECO_COLUMN_B@~2024-03-25 21:02:43": "Modest befäst Buttress",
@@ -263,7 +263,7 @@
 		"STONEMASON_WORKER_05@~2024-07-24 21:21:18": "Verktygsbord",
 		"STONEMASON_WORKER_06@~2024-07-24 21:24:08": "Täljbord",
 		"WHEAT_FARM_HAYCHARIOT_1@~2024-07-29 16:49:36": "Vetevagn",
-		"WHEAT_FARM_HAYSTACK_1@~2024-07-03 18:44:26": "Frugal Haystack",
+		"WHEAT_FARM_HAYSTACK_1@~2024-07-03 18:44:26": "Sparsam höstack",
 		"WHEAT_FARM_HAYSTACK_2@~2024-07-03 18:44:21": "Hjärtlig höstack",
 		"WHEAT_FARM_HAYSTACK_3@~2024-07-03 18:44:16": "Höstacken Bountiful",
 		"WHEAT_FARM_SCARECROW_1@2025-01-14 22:58:01": "Vigilant fågelskrämma",
@@ -298,7 +298,7 @@
 		"CASTLE_MODEST_TUNNELROOM_01@~2024-12-12 22:15:08": "Blygsam befäst port",
 		"ENCAMPMENT_MODEST_TENT_2@~2024-12-12 22:12:10": "Blygsamt kilformigt tält",
 		"CITY_STONE_FENCE@~2024-12-12 22:11:38": "Stadsstängsel",
-		"CITY_STONE_GATE@~2024-12-12 22:11:41": "City Gateway",
+		"CITY_STONE_GATE@~2024-12-12 22:11:41": "Stadens port",
 		"CASTLE_MODEST_DECO_ROOF_01A@~2025-01-09 20:48:44": "Stern Castle Finial",
 		"CASTLE_MODEST_DECO_ROOF_02A@~2025-01-14 19:07:23": "Sharp Castle Finial",
 		"FEMALE_KNIGHT_STATUE_GOLDEN": "The Vanquisher, Guld",
@@ -321,7 +321,7 @@
 	},
 	"BUILDING_DESCRIPTIONS": {
 		"DESC_TAVERN": "En plats för att underhålla byborna med fina måltider och drycker.",
-		"DESC_KEEP@2025-01-14 22:58:01": "Keep är den starkaste positionen i ditt slott och fungerar som en bas för ditt huvudföretag.",
+		"DESC_KEEP@2025-01-14 22:58:01": "Hållplatsen är den starkaste positionen i ditt slott och fungerar som en bas för ditt huvudkompani.",
 		"TRAINING_DUMMY_DESC@~2024-04-16 15:01:20": "Ett övningsobjekt som kombattanter kommer att träna med.",
 		"UNKNOWN_BLUEPRINT": "Okänd ritning",
 		"UNDER_STUDY": "För närvarande under utredning.",
@@ -353,7 +353,7 @@
 		"CASTLE_MESSHALL_DESC@~2024-04-16 15:01:48": "En plats där kombattanter kan konsumera {1}.",
 		"CASTLE_FORTIFICATION_DESC@~2023-08-28 21:46:59": "En befäst position för att förbättra säkerheten i området.",
 		"ENCAMPMENT_DESC@2025-01-14 22:58:01": "Ger dig möjlighet att skapa ett kompani som kan utföra träning, patrullering eller delta i uppdrag.",
-		"ENCAMPMENT_GROUND_DESC@2025-01-14 22:58:01": "Mittpunkten i varje läger, där ditt företag samlas.",
+		"ENCAMPMENT_GROUND_DESC@2025-01-14 22:58:01": "Mittpunkten i varje läger, där ditt kompani samlas.",
 		"ENCAMPMENT_MILITARY_TENT_DESC@~2024-04-16 15:01:53": "Tält för dina kombattanter under förberedelser inför strid och pauser under träningspass.",
 		"CASTLE_HEALINGHOUSE_DESC@~2024-04-16 15:02:05": "En plats där skadade stridande får effektiv behandling.",
 		"VINEYARD_DESC@~2023-07-25 20:40:20": "En plats där druvorna väljs ut med omsorg.",
