--- a/Foundation/sv/events.release.json
+++ b/Foundation/sv/events.release.json
@@ -240,7 +240,7 @@
 		"TOWNTALE_FIRSTMONASTERY_DESC": "En aura av lugn infinner sig när dina första bybor avlägger sitt religiösa löfte och konverterar till ett liv i asketisk fromhet. Ditt folk har välsignats med ett kloster: må det bringa tro och rikedom!",
 		"TOWNTALE_FIRSTTAVERN_TITLE": "Tavernan etablerad",
 		"TOWNTALE_FIRSTTAVERN_DESC": "Revellers gläder sig över din bys allra första taverna! Fina drycker och varma måltider förväntas, tillsammans med massor av firande. Det kommer att bli goda tider framöver!",
-		"TOWNTALE_FIRSTKEEP_TITLE@~2024-06-12 21:33:29": "Företagets utformning",
+		"TOWNTALE_FIRSTKEEP_TITLE@~2024-06-12 21:33:29": "Kompani uttaget",
 		"TOWNTALE_FIRSTKEEP_DESC@2025-01-14 22:58:01": "Framåt, marsch! Ljudet av militära övningar ekar genom hela byn. Det är kanske inte de mest behagliga ljuden, men de är en bra påminnelse om att ert folk är i säkerhet!",
 		"TOWNTALE_MILITARYVICTORY_TITLE": "Militär skicklighet",
 		"TOWNTALE_MILITARYVICTORY_DESC@2025-01-14 22:58:01": "Ditt segerrika kompani tog med sig berättelser hem om sina äventyr utomlands, till exempel hur en person besegrade en stor fiende, hur andra stod emot en fruktansvärd storm mitt i natten och hur den där personen vann grilltävlingen. Alla berättelser som verkligen skulle glädja ditt folk!",
@@ -754,11 +754,11 @@
 		"LABOURBREWER_NEEDWINE_POLISHEDSTONE_QUEST_DESC": "Jag har gått med på att leverera byggnadsstenar till arbetarna i utbyte mot vin.",
 		"LABOURBREWER_NEEDWINE_TOOL_QUEST_DESC": "Jag har gått med på att leverera verktyg till arbetarna i utbyte mot vin.",
 		"ADVANCEDONBOARDING_ASPIRATIONS_COMPLETION_DESC": "Du har bestämt vad din by ska sträva efter! Om du ändrar dig kan du när som helst revidera dina Village Aspirations.",
-		"ADVANCEDONBOARDING_PREPARECOMPANY_TITLE": "Rådgivning: Förberedelse av ett militärt företag",
-		"ADVANCEDONBOARDING_PREPARECOMPANY_DESC@~2024-04-16 15:06:08": "Även om era stridande är mycket tacksamma för Keep, anser de att de saknar förberedelse för verklig krigföring. De skulle uppskatta om ni kunde förse dem med anständiga vapen och låta dem hjälpa byborna.",
+		"ADVANCEDONBOARDING_PREPARECOMPANY_TITLE": "Rådgivning: Förberedelse av ett militärt kompani",
+		"ADVANCEDONBOARDING_PREPARECOMPANY_DESC@~2024-04-16 15:06:08": "Även om era stridande är mycket tacksamma för Hållplatsen, anser de att de saknar förberedelse för verklig krigföring. De skulle uppskatta om ni kunde förse dem med anständiga vapen och låta dem hjälpa byborna.",
 		"ADVANCEDONBOARDING_PREPARECOMPANY_CHOICE_A@~2024-01-15 19:08:37": "Vi kommer att göra dig redo!",
-		"ADVANCEDONBOARDING_PREPARECOMPANY_COMPLETION_DESC": "Ditt företag kommer snart att ställas inför åtgärder! Se till att de är tillräckligt utrustade, läkta och utbildade när de återvänder.",
-		"ADVANCEDONBOARDING_PREPARECOMPANY_QUEST_TITLE": "Rådgivning: Förberedelse av ett militärt företag",
+		"ADVANCEDONBOARDING_PREPARECOMPANY_COMPLETION_DESC": "Ditt kompani kommer snart att ställas inför utmaningar! Se till att de är tillräckligt utrustade, läkta och utbildade när de återvänder.",
+		"ADVANCEDONBOARDING_PREPARECOMPANY_QUEST_TITLE": "Råd: Förberedelse av ett militärt kompani",
 		"ADVANCEDONBOARDING_PREPARECOMPANY_QUEST_DESC@~2024-04-16 15:06:16": "Jag har lovat att tillgodose mina kombattanters behov.",
 		"ADVANCEDONBOARDING_STARTINGCASTLE_TITLE": "Råd: Att bygga ett slott",
 		"ADVANCEDONBOARDING_STARTINGCASTLE_DESC@~2024-04-16 15:06:26": "Dina bybor drömmer om ett slott! Det skulle göra vägarna säkrare och företag skulle kunna anlitas för farliga sysslor. Det sägs att ett praktfullt slott till och med skulle kunna fånga kungens blick!",
@@ -958,7 +958,7 @@
 		"MONASTERYMANUSCRIPTS_SUCCESS_TITLE@~2023-01-01 01:01:01": "Manuskript levererade",
 		"MONASTERYMANUSCRIPTS_SUCCESS_DESC@~2023-01-01 01:01:01": "Du levererade manuskripten i tid och fick stort inflytande från biskopen.",
 		"MONASTERYMANUSCRIPTS_SUCCESS_HAGGLE_DESC@~2023-01-01 01:01:01": "Du levererade manuskripten i tid och fick de resurser som förhandlats fram och ett stort inflytande från biskopen.",
-		"MONASTERYMANUSCRIPTS_LOWINFLUENCE_TITLE@~2023-12-11 19:42:16": "Begäran om manuskript för påverkan",
+		"MONASTERYMANUSCRIPTS_LOWINFLUENCE_TITLE@~2023-12-11 19:42:16": "Begäran om manuskript för Inflytande",
 		"MONASTERYMANUSCRIPTS_LOWINFLUENCE_DESC@~2023-12-11 19:42:21": "Biskopen söker manuskript om tron! Han är dock inte säker på att ert kloster har vad som krävs eftersom det står illa till hos prästerskapet. Han erbjuder dig en möjlighet att återupprätta ditt rykte om du levererar manuskript inom de närmaste månaderna.",
 		"MONASTERYMANUSCRIPTS_LOWINFLUENCE_CHOICE_A_TOOLTIP@2025-01-14 22:58:01": "Biskopen litar på att du fullföljer din order i rätt tid.",
 		"MONASTERYMANUSCRIPTS_ACCEPT_TITLE@~2024-02-02 15:24:44": "Manuskript förhandlat",
@@ -1009,13 +1009,13 @@
 		"KINGDOMHOSTING_WELCOME_DESC@~2024-06-17 18:25:29": "Kungen har lagt märke till ert slott! Det står högt och stolt vid rikets utkanter och han tänker använda det för att ta hand om sina trötta kungliga sällskap.\n\nKungen vill att du skickar en kunglig hovman till hans hov så att de kan diskutera denna fråga vidare.",
 		"KINGDOMHOSTING_WELCOME_CHOICE_A@~2024-05-03 17:06:22": "Jag ska genast skicka ett sändebud!",
 		"KINGDOMHOSTING_WELCOME_CHOICE_A_TOOLTIP@~2024-05-03 17:07:26": "Kungen förväntar sig att du ger en kunglig hovleverantör i uppdrag att besöka hans hov.",
-		"KINGDOMHOSTING_HOSTING_FAILURE_TITLE@~2024-06-17 18:38:04": "Bolag med dålig närvaro",
+		"KINGDOMHOSTING_HOSTING_FAILURE_TITLE@~2024-06-17 18:38:04": "Sällskap med dålig närvaro",
 		"KINGDOMHOSTING_HOSTING_FAILURE_DESC@~2023-01-01 01:01:01": "Kungens kompani marscherade iväg, demoraliserat och odugligt för strid.",
 		"KINGDOMHOSTING_HOSTING_SUCCESS_TITLE@~2024-06-17 18:37:58": "Företaget välbesökt",
 		"KINGDOMHOSTING_HOSTING_SUCCESS_DESC@2025-01-14 22:58:01": "Till den förste konstapelns belåtenhet lämnade kungens kompani er by förberedda och redo för strid.",
-		"KINGDOMHOSTING_KNIGHTS_QUEST_OBJECTIVE@2025-01-14 22:58:01": "Delta i Royal Company of Knights med 80% approval.",
-		"KINGDOMHOSTING_RECRUITS_QUEST_OBJECTIVE@2025-01-14 22:58:01": "Delta i Royal Company of Militiamen med 80% approval.",
-		"KINGDOMHOSTING_SOLDIERS_QUEST_OBJECTIVE@2025-01-14 22:58:01": "Delta i Royal Company of Soldiers med 80% approval.",
+		"KINGDOMHOSTING_KNIGHTS_QUEST_OBJECTIVE@2025-01-14 22:58:01": "Delta i Kungliga riddarkompaniet med 80% godkännande.",
+		"KINGDOMHOSTING_RECRUITS_QUEST_OBJECTIVE@2025-01-14 22:58:01": "Delta i Kungliga kompaniet av milismän med 80% godkännande.",
+		"KINGDOMHOSTING_SOLDIERS_QUEST_OBJECTIVE@2025-01-14 22:58:01": "Delta i Kungliga soldatkompaniet med 80% godkännande.",
 		"KINGDOMHOSTING_KNIGHTS_GROUPKEY@~2024-06-17 18:38:28": "Ett kungligt riddarkompani närmar sig din by",
 		"KINGDOMHOSTING_SOLDIERS_GROUPKEY@~2024-06-17 18:38:36": "Ett kungligt soldatkompani närmar sig din by",
 		"KINGDOMHOSTING_RECRUITS_GROUPKEY@~2024-06-17 18:38:42": "Ett kungligt kompani av milismän närmar sig din by",
@@ -1057,8 +1057,8 @@
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_TITLE@~2024-06-17 18:32:06": "Sköta om den kungliga armén",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_DESC@2025-01-14 22:58:01": "Kungen tror att ditt slott skulle vara en lämplig fristad för hans soldater! De har lidit fruktansvärda nederlag mot sina fiender och behöver nu omgruppera sig på en säker plats.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_CHOICE_A@~2024-04-16 15:08:32": "Vi kommer att se till att dina soldater tas om hand.",
-		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_CHOICE_A_TOOLTIP@~2023-01-01 01:01:01": "Kungen kommer att bjuda in ett kungligt sällskap av stridströtta soldater.",
-		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_CHOICE_B@~2023-01-01 01:01:01": "Jag kommer att skicka ett företag för att hjälpa dem.",
+		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_CHOICE_A_TOOLTIP@~2023-01-01 01:01:01": "Kungen kommer att bjuda in ett kungligt kompani av stridströtta soldater.",
+		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_CHOICE_B@~2023-01-01 01:01:01": "Jag kommer att skicka ett kompani för att hjälpa dem.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_CHOICE_B_TOOLTIP@~2023-01-01 01:01:01": "Kungen förväntar sig att du skickar ut ett kompani för att stödja hans stridströtta soldater.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_C_TITLE@~2023-01-01 01:01:01": "Utbildning av kungliga värnpliktiga",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_C_DESC@2025-01-14 22:58:01": "Kungen tror att ert slott skulle vara en lämplig träningsplats för hans nya milismän! Det verkar som om den senaste värnpliktsinsatsen var för effektiv, och nu är han fast med kompanier av ne'er-do-well.",
@@ -1067,7 +1067,7 @@
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_C_CHOICE_B@2025-01-14 22:58:01": "Mina veteraner kommer att resa till dem och utbilda dem.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_C_CHOICE_B_TOOLTIP@~2023-01-01 01:01:01": "Kungen förväntar sig att ni skickar ett kompani för att utbilda hans värnpliktiga.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_CHOICE_C@2025-01-14 22:58:01": "Jag har hört talas om ett annat slott...",
-		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_CHOICE_C_TOOLTIP@~2023-01-01 01:01:01": "Kungen kommer att omdirigera sitt sällskap till ett annat slott utanför era länder.",
+		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_CHOICE_C_TOOLTIP@~2023-01-01 01:01:01": "Kungen kommer att omdirigera sitt kompani till ett annat slott utanför era länder.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_CHOICE_D@~2023-01-01 01:01:01": "Inte för att ifrågasätta ditt beslut, men...",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_CHOICE_D_TOOLTIP@~2023-01-01 01:01:01": "Att argumentera för kungens beslut kan irritera honom.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_2_A_TITLE@~2023-01-01 01:01:01": "På jakt efter den heliga Commonware",
@@ -1079,7 +1079,7 @@
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_2_B_TITLE@~2023-01-01 01:01:01": "Att reta kungens rival",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_2_B_DESC@2025-01-14 22:58:01": "Kungen har viktiga saker i åtanke! Han vill att du tar hand om en av hans rivaler. Han kan dock inte berätta detaljerna eller hur du ska hantera det. Se bara till att det händer, okej?",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_2_B_CHOICE_A@~2024-04-16 15:08:51": "Jag kommer att vidarebefordra \"detaljerna\" till mina företag.",
-		"ASPIRATION_KINGDOM_STEP_4_EVENT_2_B_CHOICE_A_TOOLTIP@~2023-01-01 01:01:01": "Kungen kommer att förvänta sig att du sätter in ett företag för att bråka med hans rival.",
+		"ASPIRATION_KINGDOM_STEP_4_EVENT_2_B_CHOICE_A_TOOLTIP@~2023-01-01 01:01:01": "Kungen kommer att förvänta sig att du sätter in ett kompani för att bråka med hans rival.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_2_B_CHOICE_B@~2024-02-28 15:25:05": "Min kronofogde tar hand om det här...",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_2_B_CHOICE_B_TOOLTIP@~2024-02-28 15:17:28": "Din bästa fogde kommer att försöka ta itu med kungens rival.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_2_B_CHOICE_B_TOOLTIP_SUCCESS@~2023-01-01 01:01:01": "Kungens rival är i trubbel.",
@@ -1117,11 +1117,11 @@
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_3_CHOICE_D@~2023-01-01 01:01:01": "Här är en rolig en: En prior och en fogde går in på en krog...",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_3_CHOICE_D_TOOLTIP@~2023-01-01 01:01:01": "Om du underhåller kungen själv kan du råka illa ut.",
 		"ASPIRATION_KINGDOM_STEP_4_1_A_MTC_TITLE@~2023-01-01 01:01:01": "Ridderliga väktare",
-		"ASPIRATION_KINGDOM_STEP_4_1_A_MTC_DESC@~2024-04-16 15:09:37": "Ert sällskap förväntas omgruppera med några av kungens riddare vid rikets gränser. Väl på väg förväntas de krossa tunnor och ben tillsammans.",
+		"ASPIRATION_KINGDOM_STEP_4_1_A_MTC_DESC@~2024-04-16 15:09:37": "Ert kompani förväntas omgruppera med några av kungens riddare vid rikets gränser. Väl på väg förväntas de krossa tunnor och ben tillsammans.",
 		"ASPIRATION_KINGDOM_STEP_4_1_B_MTC_TITLE@~2023-01-01 01:01:01": "Räddar soldater",
 		"ASPIRATION_KINGDOM_STEP_4_1_B_MTC_DESC@2025-01-14 22:58:01": "Ett kungligt kompani har det svårt bakom fiendens linjer. Kungen vill inte förlora någon och förväntar sig att dina stridande ska få hans kompani säkert hem.",
 		"ASPIRATION_KINGDOM_STEP_4_1_C_MTC_TITLE@~2023-01-01 01:01:01": "Kris för värnpliktiga",
-		"ASPIRATION_KINGDOM_STEP_4_1_C_MTC_DESC@~2023-01-01 01:01:01": "Kungen vill att ditt företag ska utbilda hans milismän i den subtila konsten att ta på sig vattenkokarliknande hattar, stå stilla i timmar och krossa dåliga människor.",
+		"ASPIRATION_KINGDOM_STEP_4_1_C_MTC_DESC@~2023-01-01 01:01:01": "Kungen vill att ditt kompani ska utbilda hans milismän i den subtila konsten att ta på sig vattenkokarliknande hattar, stå stilla i timmar och krossa dåliga människor.",
 		"ASPIRATION_KINGDOM_STEP_4_2_A_MTC_TITLE@~2023-01-01 01:01:01": "Den heliga Commonware",
 		"ASPIRATION_KINGDOM_STEP_4_2_A_MTC_DESC@~2023-01-01 01:01:01": "Allt som krävs är en märklig dröm för att en monark plötsligt ska längta efter gamla koppar och spruckna skålar. Kungar och deras nyckfulla smak...",
 		"ASPIRATION_KINGDOM_STEP_4_2_B_MTC_TITLE@~2023-01-01 01:01:01": "Kungens rival",
@@ -1153,7 +1153,7 @@
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_A_QUEST_DESC@2025-01-14 22:58:01": "Jag har tackat ja till att delta i ett kungligt riddarkompani.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_A_QUEST_OBJECTIVE@2025-01-14 22:58:01": "Ta emot Knights med 80% approval.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_A_QUEST_GROUPKEY@~2023-01-01 01:01:01": "Ett kompani av kungliga riddare närmar sig din by.",
-		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_QUEST_DESC@2025-01-14 22:58:01": "Jag har tackat ja till att delta i en Royal Company of Soldiers.",
+		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_QUEST_DESC@2025-01-14 22:58:01": "Jag har tackat ja till att delta i ett Kungligt solderkompani.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_QUEST_OBJECTIVE@2025-01-14 22:58:01": "Ta emot soldaterna med 80% approval.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_B_QUEST_GROUPKEY@~2023-01-01 01:01:01": "Ett kungligt kompani soldater närmar sig din by.",
 		"ASPIRATION_KINGDOM_STEP_4_EVENT_1_C_QUEST_DESC@2025-01-14 22:58:01": "Jag har tackat ja till att delta i ett kungligt miliskompani.",
@@ -1178,13 +1178,13 @@
 		"KINGDOMHOSTING_KINGSUMMON_PAUSE_DESC@2025-01-14 22:58:01": "Efter ett kort möte gick hovet med på att pausa de kungliga sällskapens ankomst till ert slott.",
 		"KINGDOMHOSTING_KINGSUMMON_RESUME_TITLE@~2024-06-17 18:23:49": "Återupptagande av kungliga plikter",
 		"KINGDOMHOSTING_KINGSUMMON_RESUME_DESC@2025-01-14 22:58:01": "Det kungliga hovet välkomnar ert beslut att återuppta de kungliga sällskapens ankomst till ert slott.",
-		"ADVANCEDONBOARDING_SECONDCOMPANY_TITLE@~2024-06-04 16:52:08": "Rådgivning: Bildande av ett nytt bolag",
+		"ADVANCEDONBOARDING_SECONDCOMPANY_TITLE@~2024-06-04 16:52:08": "Rådgivning: Bildande av ett nytt kompani",
 		"ADVANCEDONBOARDING_SECONDCOMPANY_DESC@2025-01-14 22:58:01": "Byborna vill att du upprättar ett nytt militärt kompani! De tror att det kommer att generera mer resurser och göra det möjligt för dig att tilldela dem till patruller, vilket kommer att bidra till att öka din bys befolkningstäthet.",
 		"ADVANCEDONBOARDING_SECONDCOMPANY_CHOICE_A@~2024-06-12 19:15:14": "Låt oss rekrytera fler spjutmän!",
 		"ADVANCEDONBOARDING_SECONDCOMPANY_CHOICE_B@2025-01-14 22:58:01": "Låt oss rekrytera fler bågskyttar!",
 		"ADVANCEDONBOARDING_SECONDCOMPANY_CHOICE_C@2025-01-14 22:58:01": "Låt oss rekrytera fler svärdsmän!",
-		"ADVANCEDONBOARDING_SECONDCOMPANY_COMPLETION_DESC@~2024-06-04 16:52:28": "Extra företag innebär extra resurser! Växla dem mellan uppdrag och träning för att hålla resursflödet stabilt.",
-		"ADVANCEDONBOARDING_SECONDCOMPANY_QUEST_DESC@2025-01-14 22:58:01": "Jag har gått med på att bilda ett nytt bolag.",
+		"ADVANCEDONBOARDING_SECONDCOMPANY_COMPLETION_DESC@~2024-06-04 16:52:28": "Extra kompanier innebär extra resurser! Växla dem mellan uppdrag och träning för att hålla resursflödet stabilt.",
+		"ADVANCEDONBOARDING_SECONDCOMPANY_QUEST_DESC@2025-01-14 22:58:01": "Jag har gått med på att bilda ett nytt kompani.",
 		"ASPIRATION_LABOR_STEP_1_TITLE": "En prestigefylld borg, del I",
 		"ASPIRATION_LABOR_STEP_1_DESC@~2024-12-18 03:43:41": "De Äldste har hört talas om ert engagemang för vanligt folk. De besöker dig å sitt folks vägnar och råder dig att ansöka hos seneschalen om en stadga för staden.\n\nAtt bli en oberoende stad, säger de, kommer att ge din by friheten att skapa sin egen väg, fri från prästerskapets och adelns inflytande.",
 		"ASPIRATION_LABOR_STEP_1_CHOICE_A": "Vi ska förtjäna vår suveränitet!",
