--- a/Foundation/sv/general.release.json
+++ b/Foundation/sv/general.release.json
@@ -10,7 +10,7 @@
 		"CATEGORY_DORM": "Sovsal",
 		"CATEGORY_DORM_SING": "sovsal",
 		"CATEGORY_DORM_PLUR": "sovsalar",
-		"CATEGORY_ABBEY": "Abbey",
+		"CATEGORY_ABBEY": "Kloster",
 		"CATEGORY_ABBEY_SING": "kloster",
 		"CATEGORY_ABBEY_PLUR": "kloster",
 		"CATEGORY_BASIN": "Bassäng",
@@ -60,12 +60,12 @@
 	"BUDGET": {
 		"BUDGET_DONATION_INCOME_DESC": "Mynt som erhållits som donationer från nöjda gäster på Hospitium.",
 		"BUDGET_WAGE_EXPENSE_DESC@~2024-04-16 15:11:23": "Mynt som används för att betala de stridande parternas löner.",
-		"BUDGET_ROYAL_COMPANY_RESUPPLY_INCOME_DESC@~2024-06-17 18:07:20": "Mynt som du tjänar genom att delta i din kungs kungliga företag."
+		"BUDGET_ROYAL_COMPANY_RESUPPLY_INCOME_DESC@~2024-06-17 18:07:20": "Mynt som du tjänar genom att delta i din kungs kungliga kompani."
 	},
 	"GENERAL": {
 		"WILL_ADD_TO_YOUR_ROYAL_TAXES": "Kommer att lägga till dina kungliga skatter:",
 		"UNASSIGN_WEAPON": "Tilldela inte vapen",
-		"TIME_LEFT_TO_SEND_SOLDIERS@~2024-04-16 15:12:13": "{IMG1} dag(ar) kvar för att skicka ett företag",
+		"TIME_LEFT_TO_SEND_SOLDIERS@~2024-04-16 15:12:13": "{IMG1} dag(ar) kvar för att skicka ett kompani",
 		"SOLDIERS_HAVE_LEFT@~2024-04-16 15:00:07": "Stridande har lämnat",
 		"SOLDIERS_ARE_REGROUPING@~2024-04-16 15:00:14": "Stridande grupperar om sig",
 		"SOLDIERS_ARE_COMING_BACK@2025-01-14 22:58:01": "Stridande återvänder",
@@ -259,7 +259,7 @@
 		"VISITING_NUN": "Besökande nunna",
 		"VISITING_MONK": "Besökande munk",
 		"PILGRIMS@~2023-07-31 17:09:31": "Pilgrimer",
-		"ABBESS@~2023-12-05 18:16:11": "Abbess",
+		"ABBESS@~2023-12-05 18:16:11": "Abbedissa",
 		"HERALD@~2023-12-14 23:06:49": "Herald",
 		"ABBESS_RETINUE@~2024-01-09 21:23:14": "Abbedissans retinue",
 		"VISITING_PRIOR@~2024-01-10 18:52:40": "Besökande Prior",
@@ -267,7 +267,7 @@
 		"FIRST_CONSTABLE@~2024-03-18 15:09:55": "Förste konstapel",
 		"YOUR_KING@~2024-05-02 18:50:37": "Din kung",
 		"VISITING_KINGRETINUE@~2024-05-02 18:50:44": "Kungens reträtt",
-		"VISITING_ROYALCOMPANY@~2024-05-02 18:50:49": "Kungligt bolag",
+		"VISITING_ROYALCOMPANY@~2024-05-02 18:50:49": "Kungligt kompani",
 		"TRAVELER@~2024-12-17 04:37:32": "Resenär",
 		"SENESCHAL@~2024-12-18 03:30:32": "Seneschal"
 	},
@@ -324,14 +324,14 @@
 		"NO_BATTLE_HISTORY": "Inga nya uppdrag att visa.",
 		"COMPANIES@~2023-11-03 17:48:44": "Företag",
 		"CAMPAIGN@~2023-11-03 17:49:11": "Kampanj",
-		"CREATE_COMPANY@~2024-03-25 17:48:02": "Lägg till ett företag",
-		"MANAGE_COMPANY@~2024-02-07 20:15:40": "Hantera företag",
-		"RECRUIT_VILLAGER@~2024-02-07 20:15:06": "Rekrytera en bybo till företaget",
+		"CREATE_COMPANY@~2024-03-25 17:48:02": "Lägg till ett kompani",
+		"MANAGE_COMPANY@~2024-02-07 20:15:40": "Hantera kompani",
+		"RECRUIT_VILLAGER@~2024-02-07 20:15:06": "Rekrytera en bybo till kompaniet",
 		"MISSION|NEW_KEY@~2024-01-30 23:14:33": "Uppdragsplikt",
 		"DISBAND_COMPANY@~2024-02-13 16:38:18": "Upplös kompani",
 		"DISBAND_SOLDIER@~2024-04-16 15:13:27": "Avskeda kombattant",
 		"FORTIFICATION_PLUR@~2024-04-25 20:48:59": "Befästningar",
-		"COMPANY_LIST@~2024-09-25 17:37:57": "Föreningslista",
+		"COMPANY_LIST@~2024-09-25 17:37:57": "Kompanilista",
 		"SOLDIER_LIST@~2024-09-25 17:38:16": "Lista över kombattanter",
 		"GUARD_DUTY@~2024-12-18 23:47:05": "Vakttjänstgöring",
 		"CURRENT_DUTY_X@~2024-12-18 23:47:10": "Aktuell tjänst: {1}"
@@ -387,8 +387,8 @@
 		"YIELD_RESOURCE_X@~2024-12-17 01:56:51": "Arbetsplatsen producerar {1}",
 		"STRENGTH_OF_ARMY@~2024-03-15 15:16:16": "Styrkan i din armé",
 		"YOU_WON_A_HARD_MILITARY_CAMPAIGN": "Din militära seger",
-		"HAVE_A_MILITARY_CAMPAIGN_ONGOING@~2024-06-03 19:11:44": "Skicka ut ett företag på ett militärt uppdrag",
-		"HAVE_A_MILITARY_CAMPAIGN_ONGOING_SUB@~2024-06-03 19:11:39": "skicka ut ett företag på ett militärt uppdrag",
+		"HAVE_A_MILITARY_CAMPAIGN_ONGOING@~2024-06-03 19:11:44": "Skicka ut ett kompani på ett militärt uppdrag",
+		"HAVE_A_MILITARY_CAMPAIGN_ONGOING_SUB@~2024-06-03 19:11:39": "skicka ut ett kompani på ett militärt uppdrag",
 		"SUCCEED_X_MILITARY_MISSION@2025-01-14 22:58:01": "Slutför det militära uppdraget {1}",
 		"SUCCEED_X_MILITARY_CAMPAIGN@2025-01-14 22:58:01": "Slutför den militära kampanjen {1}",
 		"COMPLETE_ANY_MILITARY_CAMPAIGN@~2024-05-14 15:34:39": "Slutför alla militära uppdrag",
@@ -399,15 +399,15 @@
 		"MISSION_SUCCESS_DESC@~2024-04-16 15:13:59": "Dina kombattanter har framgångsrikt återvänt med krigsbyte.",
 		"MISSION_FAILURE": "Misslyckat uppdrag",
 		"MISSION_FAILURE_DESC@~2024-04-16 15:14:04": "Dina kombattanter besegrades och återvände tomhänta.",
-		"CONDITION_COMPANY_HAS_BEHAVIOR_X@~2024-01-30 23:13:27": "Ställ in en företagsuppgift till {1}",
+		"CONDITION_COMPANY_HAS_BEHAVIOR_X@~2024-01-30 23:13:27": "Ange en kompaniuppgift till {1}",
 		"CONDITION_COMPANY_FORMED@~2024-01-31 20:39:32": "Bilda ett kompani",
-		"CONDITION_COMPANY_X_FORMED@~2024-01-31 20:39:34": "Formulär a {1}",
-		"CONDITION_COMPANY_X_STRENGTH_REACHED@~2024-03-15 15:19:54": "Har ett företag nått {1} Might",
+		"CONDITION_COMPANY_X_FORMED@~2024-01-31 20:39:34": "Skapa ett {1}",
+		"CONDITION_COMPANY_X_STRENGTH_REACHED@~2024-03-15 15:19:54": "Få ett kompani att nå {1} mäktighet ",
 		"CAMPAIGN_SUCCESS@~2024-02-26 19:09:27": "Framgång för kampanjen",
 		"CAMPAIGN_FAILURE@~2024-02-26 19:09:33": "Misslyckad kampanj",
 		"CAMPAIGN_CANCEL@~2024-03-18 20:58:25": "Bataljon återkallad",
 		"CAMPAIGN_CANCEL_DESC@~2024-04-16 14:59:48": "Dina stridande har återvänt från kampanjen.",
-		"MISSION_CANCEL@~2024-03-18 20:58:50": "Företaget återkallat",
+		"MISSION_CANCEL@~2024-03-18 20:58:50": "Kompaniet återkallat",
 		"MISSION_CANCEL_DESC@~2024-04-16 15:14:08": "Dina kombattanter återvände säkert från uppdraget.",
 		"SUCCEED_X_MILITARY_MISSIONS@2025-01-14 22:58:01": "Slutföra {1} militära uppdrag",
 		"SUCCEED_X_MILITARY_CAMPAIGNS@2025-01-14 22:58:01": "Slutföra {1} militära kampanjer",
@@ -415,7 +415,7 @@
 		"CONDITION_FORM_X_COMPANIES@~2024-12-26 18:32:00": "Form {1} Företag."
 	},
 	"MUSIC": {
-		"CHIRP": "Chirp",
+		"CHIRP": "Kvitter",
 		"DOOT": "Doot"
 	},
 	"PASTURES": {
@@ -427,7 +427,7 @@
 		"KINGDOM_KINGSUMMON_HOSTING_MANDATE@~2024-06-17 18:33:39": "Närvara vid hovet för att diskutera kungliga plikter",
 		"KINGDOM_KINGSUMMON_MANDATE_BTN@~2024-05-03 17:18:44": "Delta",
 		"KINGDOM_KINGSUMMON_HOSTING_MANDATE_BTN_TOOLTIP@~2024-06-17 18:21:26": "Om du accepterar dina kungliga plikter kommer trötta kungliga kompanier att besöka din by.",
-		"KINGDOMHOSTING_KINGSUMMON_TITLE@~2024-06-17 18:09:45": "Att delta i Royal Company",
+		"KINGDOMHOSTING_KINGSUMMON_TITLE@~2024-06-17 18:09:45": "Delta i kungligt kompani",
 		"KINGDOMHOSTING_KINGSUMMON_DESC@2025-01-14 22:58:01": "Din kungliga hovleverantör ansluter sig till det överdådiga kungliga hovet och får en inblick i rikets storslagna strategier. Krig rasar längs gränserna nära din by, och kungen har beslutat att ditt slott skulle vara den mest lämpliga platsen för att ta emot och delta i hans trötta kungliga företag.\n\nKungen lovar dig mynt och inflytande om du accepterar dessa kungliga plikter.",
 		"KINGDOMHOSTING_KINGSUMMON_CHOICE_A@~2024-05-03 18:17:16": "Vårt slott står till er tjänst, Ers Majestät.",
 		"KINGDOMHOSTING_KINGSUMMON_CHOICE_A_TOOLTIP@2025-01-14 22:58:01": "Genom att acceptera dina kungliga plikter måste du delta i trötta kungliga sällskap som besöker din by.",
