--- a/Foundation/sv/help.release.json
+++ b/Foundation/sv/help.release.json
@@ -18,40 +18,40 @@
 		"HELP_HOUSING_BEAUTIFICATION_TITLE": "Försköning",
 		"HELP_HOUSING_UNDESIRABLENEIGHBORHOOD_TITLE@2025-01-27 18:38:51": "Oönskade grannskap",
 		"HELP_HOUSING_PAVEDROAD_TITLE": "Asfalterade vägar",
-		"HELP_EDICTSPRIVILEGES_SLOTS_TITLE@2025-01-27 18:38:51": "Edict & Privilege-spelautomater",
-		"HELP_EDICTSPRIVILEGES_EFFECTS_TITLE": "Effekter av Edicts & Privilegies",
+		"HELP_EDICTSPRIVILEGES_SLOTS_TITLE@2025-01-27 18:38:51": "Edict & Privilege Slots",
+		"HELP_EDICTSPRIVILEGES_EFFECTS_TITLE": "Effects of Edicts & Privileges",
 		"HELP_EDICTSPRIVILEGES_CHANGING_TITLE": "Ändring av föreskrifter och privilegier",
 		"HELP_LABORER_ADDITIONALTAXATION_TITLE": "Ytterligare skatter",
 		"HELP_LABORER_TAVERN_TITLE": "Värdshus",
 		"HELP_LABORER_LODGING_TITLE": "Husrum",
-		"HELP_KINGDOM_COMPANIES_TITLE": "Militära företag",
+		"HELP_KINGDOM_COMPANIES_TITLE": "Militära kompanier",
 		"HELP_KINGDOM_QUARTERS_TITLE": "Militärkvarter",
-		"HELP_KINGDOM_FITTING_TITLE": "Monteringsföretag",
+		"HELP_KINGDOM_FITTING_TITLE": "Fitting Companies",
 		"HELP_KINGDOM_MISSION_TITLE": "Militära uppdrag",
-		"HELP_KINGDOM_ROYALHOSTING_TITLE": "Kungliga bolagen",
-		"HELP_KINGDOM_DUTY_TITLE": "Företagets skyldigheter",
-		"HELP_KINGDOM_GRADE_TITLE": "Militära betyg",
-		"HELP_CLERGY_DEVOTING_TITLE": "Engagerade bybor",
+		"HELP_KINGDOM_ROYALHOSTING_TITLE": "Kungliga kompanier",
+		"HELP_KINGDOM_DUTY_TITLE": "Kompaniplikt",
+		"HELP_KINGDOM_GRADE_TITLE": "Militära grader",
+		"HELP_CLERGY_DEVOTING_TITLE": "Utse bybor",
 		"HELP_CLERGY_WORKPLACE_TITLE": "Klostrets arbetsplatser",
 		"HELP_CLERGY_MANUSCRIPT_TITLE": "Manuskript",
 		"HELP_CLERGY_NEEDS_TITLE": "Klostrets behov",
 		"HELP_CLERGY_PILGRIMS_TITLE": "Pilgrimer",
 		"HELP_EXPANDING_IMPROVING_TITLE": "Förbättra arbetsplatserna",
-		"HELP_EXPANDING_NEWTERRITORY_TITLE": "Nytt territoriet",
+		"HELP_EXPANDING_NEWTERRITORY_TITLE": "Nytt territorie",
 		"HELP_EXPANDING_TRAVELDISTANCE_TITLE": "Reseavstånd",
 		"HELP_EXPANDING_NEWHUBS_TITLE": "Nya nav",
 		"HELP_OPPORTUNITIES_HOSTING_TITLE": "Hosting",
-		"HELP_ASPIRATION_NEWGAME_TITLE@2025-01-27 18:38:51": "Nytt spel Aspiration",
-		"HELP_ASPIRATION_QUESTS_TITLE": "Aspiration Quests",
-		"HELP_ASPIRATION_COMPLETION_TITLE": "Ambition Färdigställande",
+		"HELP_ASPIRATION_NEWGAME_TITLE@2025-01-27 18:38:51": "Ny spelsträvan",
+		"HELP_ASPIRATION_QUESTS_TITLE": "Strävansuppdrag",
+		"HELP_ASPIRATION_COMPLETION_TITLE": "Aspiration Completion",
 		"HELP_GAMERULES_PRESETS_TITLE": "Förinställningar",
 		"HELP_GAMERULES_RULES_TITLE": "Regler",
-		"HELP_GETTINGSTARTED_FIRSTWATCHPOST_TITLE": "Din första Watchpost",
+		"HELP_GETTINGSTARTED_FIRSTWATCHPOST_TITLE": "Din första utkikspost",
 		"HELP_GETTINGSTARTED_FIRSTTAVERN_TITLE": "Din första krog",
 		"HELP_GETTINGSTARTED_FIRSTMONASTERY_TITLE": "Ditt första kloster",
-		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TITLE": "Ditt första företag",
+		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TITLE": "Ditt första kompani",
 		"HELP_GETTINGSTARTED_FIRSTMANDATES_TITLE@2025-01-27 18:38:51": "Ditt första uppdrag",
-		"HELP_GETTINGSTARTED_FIRSTFORTIFICATION_TITLE@~2025-01-11 23:58:57": "Tillhandahållande av berikning",
+		"HELP_GETTINGSTARTED_FIRSTFORTIFICATION_TITLE@~2025-01-11 23:58:57": "Providing Fortification",
 		"HELP_GETTINGSTARTED_FIRSTDECORATION_TITLE@2025-01-27 18:38:51": "Din första dekoration",
 		"HELP_GETTINGSTARTED_INCREASINGPROSPERITY_TITLE": "Ökat välstånd",
 		"HELP_GETTINGSTARTED_HOSTINGGUESTS_TITLE": "Ta emot gäster",
@@ -77,7 +77,7 @@
 		"HELP_RESOURCES_SCULPTURESTAINEDGLASS_TEXT_2@~2025-01-07 00:06:00": "Dessa **projekt** måste först produceras på **dedikerade arbetsplatser** med hjälp av deras **listade resurser** innan de transporteras till byggarbetsplatserna.",
 		"HELP_RESOURCES_SCULPTURESTAINEDGLASS_TEXT_3@2025-01-27 18:38:51": "Efter att ha låsts upp i **Progression Screen** kan både **Sculpture Workshop** och **Stained Glass Workshop** byggas i **Builder's Workshop**.",
 		"HELP_VILLAGERS_PROMOTION_TEXT_1@~2025-01-07 00:08:43": "**Promotion** gör det möjligt för dig att **förbättra** **effektiviteten** hos din befolkning till **kostnaden** av **ytterligare behov** som de måste uppfylla.",
-		"HELP_VILLAGERS_PROMOTION_TEXT_2@~2025-01-07 00:08:51": "**kostnaden** för marknadsföring beror på befolkningens **profil**:",
+		"HELP_VILLAGERS_PROMOTION_TEXT_2@~2025-01-07 00:08:51": "**Kostnaden** för promotering beror på befolkningens **profil**:",
 		"HELP_VILLAGERS_PROMOTION_TEXT_3@2025-01-27 18:38:51": "**Bybor**: Befordra Serfs till Commoners eller Citizens via en myntkostnad i förskott.",
 		"HELP_VILLAGERS_PROMOTION_TEXT_4@2025-01-27 18:38:51": "**Munkar**: Befordra noviser till munkar eller nunnor och sedan till prior eller priorinna med hjälp av manuskript.",
 		"HELP_VILLAGERS_PROMOTION_TEXT_5@2025-01-27 18:38:51": "**Kombattanter**: Befordra högt rankade milismän till soldater eller riddare till priset av högre löner för kombattanter.",
@@ -136,15 +136,15 @@
 		"HELP_LABORER_LODGING_TEXT_2@2025-01-27 18:38:51": "När ditt **Inn Lodging** är **funktionellt** kommer din **första resenär** att anlända. Om du **tillåter** dem att **sprida ordet** om din by, kommer **fler resenärer** att göra ett **besök**.",
 		"HELP_LABORER_LODGING_TEXT_3@~2025-01-13 16:32:00": "Du kan **tjäna** en rimlig summa **mynt** för varje resenär genom att uppfylla **alla** deras **behov**. Men **resenärer med dålig service** kan **gå utan att betala**.",
 		"HELP_KINGDOM_COMPANIES_TEXT_1@2025-01-27 18:38:51": "För att **rekrytera** kombattanter måste du bilda **kompanier** vid **Castle Keep** eller via **Encampments**.",
-		"HELP_KINGDOM_COMPANIES_TEXT_2@~2025-01-07 00:58:10": "Varje företag **specialiserar** sig på en viss typ av **vapen**, där **Castle Company** fokuserar på **Spears**.",
-		"HELP_KINGDOM_COMPANIES_TEXT_3@2025-01-27 18:38:51": "Det är **viktigt** att bilda en **variation** av **kompanier**, eftersom senare **militära uppdrag** kommer att kräva **flera typer av kompanier**.",
+		"HELP_KINGDOM_COMPANIES_TEXT_2@~2025-01-07 00:58:10": "Varje kompani **specialiserar** sig på en viss typ av **vapen**, där **Slottskompani** fokuserar på **Spjut**.",
+		"HELP_KINGDOM_COMPANIES_TEXT_3@2025-01-27 18:38:51": "Det är **viktigt** att bilda en **mängd** olika **kompanier**, eftersom senare **militära uppdrag** kommer att kräva **flera typer av kompanier**.",
 		"HELP_KINGDOM_COMPANIES_TEXT_4@~2025-01-07 00:59:54": "**Företag** har en **baskapacitet** på **stridande**, som kan **ökas** genom att bygga en **kommandopost**.",
 		"HELP_KINGDOM_QUARTERS_TEXT_1@~2025-01-07 01:00:26": "**Stridande** kan **huseras** i **Slottet** med hjälp av följande byggnader:",
 		"HELP_KINGDOM_QUARTERS_TEXT_2@~2025-01-07 01:00:31": "**Baracker**: Tillhandahåller kompakt boende för milismän och soldater.",
 		"HELP_KINGDOM_QUARTERS_TEXT_3@~2025-01-07 01:00:34": "**Privata kvarter**: Erbjuder rymligt boende för riddare.",
 		"HELP_KINGDOM_QUARTERS_TEXT_4@~2025-01-07 01:00:44": "Dessa byggnaders **kapacitet** bestäms av deras **storlek**.",
 		"HELP_KINGDOM_QUARTERS_TEXT_5@~2025-01-07 01:01:00": "Om kombattanter **inte** har tillgång** till ett **läkningshus**, återhämtar de sig från sår på sitt **kvarter**, men i en mycket **långsammare takt**.",
-		"HELP_KINGDOM_FITTING_TEXT_1@2025-01-27 18:38:51": "Ett bolags **makt** mäts genom **Might**, som bestäms av **flera faktorer**:",
+		"HELP_KINGDOM_FITTING_TEXT_1@2025-01-27 18:38:51": "Ett kompani **kraft** mäts genom **Mäktighet**, som bestäms av **flera faktorer**:",
 		"HELP_KINGDOM_FITTING_TEXT_2@~2025-01-07 01:01:19": "Antal kombattanter",
 		"HELP_KINGDOM_FITTING_TEXT_3": "Vapnens styrka",
 		"HELP_KINGDOM_FITTING_TEXT_4": "Lycka för de stridande",
@@ -153,26 +153,26 @@
 		"HELP_KINGDOM_FITTING_TEXT_7": "Rank Nivå",
 		"HELP_KINGDOM_FITTING_TEXT_8": "Status",
 		"HELP_KINGDOM_FITTING_TEXT_9": "Träningsstatus eller om de är skadade",
-		"HELP_KINGDOM_FITTING_TEXT_10@~2025-01-07 01:01:47": "Ett **välförberett** företag har mycket större chans att **överleva** farliga **uppdrag**, så se till att göra det bästa av dem!",
+		"HELP_KINGDOM_FITTING_TEXT_10@~2025-01-07 01:01:47": "Ett **välförberett** kompani har mycket större chans att **överleva** farliga **uppdrag**, så se till att göra det bästa av dem!",
 		"HELP_KINGDOM_MISSION_TEXT_1@~2025-01-07 01:02:01": "**Företag** kan genomföra **Militära uppdrag**, som erbjuder en mängd olika **belöningar**.",
 		"HELP_KINGDOM_MISSION_TEXT_2@~2025-01-07 01:02:28": "När ett kompani skickas ut på ett **militärt uppdrag** **reser** de iväg under **några dagar**. När de **återvänder** tar de stridande med sig en del av de utlovade **belöningarna** och **läker** och **återhämtar sig** sedan på slottet.",
 		"HELP_KINGDOM_MISSION_TEXT_3@~2025-01-07 01:02:38": "**Efter** några dagar **återupptar** kompaniet sitt **militära uppdrag** utanför byn.",
-		"HELP_KINGDOM_MISSION_TEXT_4@2025-01-27 18:38:51": "Efter att ha genomfört **tre** sådana **cykler** återvänder **företaget** helt **till byn och är **klart** för nästa **uppdrag**.",
-		"HELP_KINGDOM_MISSION_TEXT_5@~2025-01-07 01:03:16": "Ju **bättre** ett företag **återhämtar sig**, desto **bättre** presterar det **, vilket resulterar i en **större slutlig belöning**.",
+		"HELP_KINGDOM_MISSION_TEXT_4@2025-01-27 18:38:51": "Efter att ha genomfört **tre** sådana **cykler** återvänder **kompaniet** helt **till byn och är **klart** för nästa **uppdrag**.",
+		"HELP_KINGDOM_MISSION_TEXT_5@~2025-01-07 01:03:16": "Ju **bättre** ett kompani **återhämtar sig**, desto **bättre** presterar det **, vilket resulterar i en **större slutlig belöning**.",
 		"HELP_KINGDOM_MISSION_TEXT_6@~2025-01-07 01:03:32": "Successivt svårare **militära uppdrag** kan **låsas upp** genom att framgångsrikt **fullfölja tidigare** uppdrag.",
-		"HELP_KINGDOM_ROYALHOSTING_TEXT_1@~2025-01-07 01:04:02": "När du har grundat ditt **slott**, bildat ditt **första företag** och uppnått tillräckligt med **välstånd** kommer du att bli inbjuden att vara **värd** och **delta** i **kungliga företag** i ditt slott.",
+		"HELP_KINGDOM_ROYALHOSTING_TEXT_1@~2025-01-07 01:04:02": "När du har grundat ditt **slott**, bildat ditt **första kompani** och uppnått tillräckligt med **välstånd** kommer du att bli inbjuden att vara **värd** och **delta** i **kungliga kompani** i ditt slott.",
 		"HELP_KINGDOM_ROYALHOSTING_TEXT_2@2025-01-27 18:38:51": "Dessa trötta gäster kommer att behöva **samma behov** som dina **stridande**, tillsammans med tid för att **läka** och **träna**. Se till att du har tillräckligt med **Träningsdockor** för att ta emot dem!",
 		"HELP_KINGDOM_ROYALHOSTING_TEXT_3@2025-01-27 18:38:51": "Genom att hantera **Royal Companies** tjänar du **Coins** och får **Kingdom Influence**.",
-		"HELP_KINGDOM_DUTY_TEXT_1@~2025-01-07 01:04:49": "Varje **företag** kan **tilldelas** en specifik **uppgift**:",
+		"HELP_KINGDOM_DUTY_TEXT_1@~2025-01-07 01:04:49": "Varje **kompani** kan **tilldelas** en specifik **uppgift**:",
 		"HELP_KINGDOM_DUTY_TEXT_2@~2025-01-07 01:04:53": "**Uppdragstjänstgöring**: Delta i militära uppdrag.",
 		"HELP_KINGDOM_DUTY_TEXT_3@~2025-01-07 01:04:57": "**Patrulleringstjänst**: Tillhandahålla patrulltäckning över utsedda patrullområden.",
 		"HELP_KINGDOM_DUTY_TEXT_4@~2025-01-07 01:05:00": "**Vakttjänstgöring**: Skydda aktiva befästningsbyggnader, t.ex. vakttorn.",
-		"HELP_KINGDOM_DUTY_TEXT_5@~2025-01-07 01:05:14": "Ett bolags **Duty** kan **ändras** **när som helst**, förutsatt att bolaget är tillgängligt.",
+		"HELP_KINGDOM_DUTY_TEXT_5@~2025-01-07 01:05:14": "Ett kompanis **plikt** kan **ändras** **när som helst**, förutsatt att kompaniet är tillgängligt.",
 		"HELP_KINGDOM_GRADE_TEXT_1@2025-01-27 18:38:51": "När du **genomför** alltmer utmanande **militära uppdrag** kommer du att **låsa upp högre militära uppdrag**.",
 		"HELP_KINGDOM_GRADE_TEXT_2@~2025-01-07 01:05:55": "Dessa **högsvårighetsuppdrag** kan endast utföras av **militära kompanier** av **lika eller högre grad**:",
 		"HELP_KINGDOM_GRADE_TEXT_3@~2025-01-07 01:06:01": "**1:a klassens kompani**: Består helt och hållet av milismän.",
 		"HELP_KINGDOM_GRADE_TEXT_4@~2025-01-07 01:06:03": "**Kompani av 2:a graden**: Måste innehålla minst en soldat.",
-		"HELP_KINGDOM_GRADE_TEXT_5@~2025-01-07 01:06:06": "**Kompani av 3:e graden**: Måste innehålla minst en Knight.",
+		"HELP_KINGDOM_GRADE_TEXT_5@~2025-01-07 01:06:06": "**Kompani av 3: e graden**: Måste innehålla minst en riddare.",
 		"HELP_KINGDOM_GRADE_TEXT_6@~2025-01-07 01:06:24": "Ett kompani **förlorar** sin **Grad** om det **inte längre** har den **högstatusstridande** som krävs.",
 		"HELP_CLERGY_DEVOTING_TEXT_1@~2025-01-07 01:17:19": "**Monastiker** är bybor som viger sina liv åt ett **kloster** och blir **munkar** eller **nunnor**.",
 		"HELP_CLERGY_DEVOTING_TEXT_2@2025-01-27 18:38:51": "För att **devotera** bybor, bygg **Dorms** och välj alternativet **\"Devotera en bybo till klostret\"** i **Byggfönstret**.",
@@ -265,12 +265,12 @@
 		"HELP_GETTINGSTARTED_FIRSTMONASTERY_TEXT_4@~2025-01-07 01:38:44": "**Delegera** **munkar** och/eller **nunnor** till **klostret**. Var försiktig med detta: Monastiker är **vigda för livet**.",
 		"HELP_GETTINGSTARTED_FIRSTMONASTERY_TEXT_5@2025-01-27 18:38:51": "Bygg en **Herb Garden** för att producera den värdefulla resursen **Herb**.",
 		"HELP_GETTINGSTARTED_FIRSTMONASTERY_TEXT_6@2025-01-27 18:38:51": "Bygg ett **Scriptorium** för att producera den fördelaktiga resursen **Manuscript**.",
-		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TEXT_1@~2025-01-07 01:39:32": "**Militärföretag** genomför **uppdrag** som ger värdefulla **resurser**.",
-		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TEXT_2@~2025-01-11 23:54:02": "Att **skapa** och förbereda ditt första företag:",
-		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TEXT_3@~2025-01-07 01:39:59": "Klicka på knappen **\"Add a Company\"** på din **Castle Keep** och tilldela bybor. Var försiktig med detta: **Soldater** är **dedikerade för livet**.",
+		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TEXT_1@~2025-01-07 01:39:32": "**Militärkompanier** genomför **uppdrag** som ger värdefulla **resurser**.",
+		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TEXT_2@~2025-01-11 23:54:02": "Att **skapa** och förbereda ditt första kompani:",
+		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TEXT_3@~2025-01-07 01:39:59": "Klicka på knappen **\"Lägg till ett kompani\"** på din **Slottets borg** och tilldela bybor. Var försiktig med detta: **Soldater** är **dedikerade för livet**.",
 		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TEXT_4@~2025-01-11 23:57:20": "Förvara **vapen** i ett **förråd** så att dina kombattanter kan utrusta sig för strid.",
 		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TEXT_5@~2025-01-11 23:55:55": "Vi rekommenderar att du väntar tills dina stridande är **fullständigt utbildade** innan du skickar dem på **uppdrag**.",
-		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TEXT_6@~2025-01-11 23:57:48": "**Tilldela** och **Distribuera** ditt kompani till ett **uppdrag** med hjälp av **Army Book**.",
+		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TEXT_6@~2025-01-11 23:57:48": "**Tilldela** och **Distribuera** ditt kompani till ett **uppdrag** med hjälp av **Arméboken**.",
 		"HELP_GETTINGSTARTED_FIRSTMANDATES_TEXT_1@~2025-01-07 01:40:50": "I **Great Hall** kan du anta **Mandat**.",
 		"HELP_GETTINGSTARTED_FIRSTMANDATES_TEXT_2@2025-01-27 18:38:51": "Du kan när som helst starta **Uttaxeringsmandatet** för att få mynt på bekostnad av bybornas lycka eller använda **Promote Mandate** för att höja bybornas status.",
 		"HELP_GETTINGSTARTED_FIRSTMANDATES_TEXT_3@~2025-01-07 01:41:13": "**Mandat** har alltid en **kostnad** och en **nedkylning**.",
@@ -297,7 +297,7 @@
 		"HELP_GETTINGSTARTED_FIRSTBRIDGE_TEXT_4@2025-01-27 18:38:51": "Du kan bestämma dess **längd** och **rotation** genom att **flytta** dess **änddelar**.",
 		"HELP_GETTINGSTARTED_FIRSTBRIDGE_TEXT_5@2025-01-27 18:38:51": "Du kan **flytta** och **skalera** bron genom att **markera hela byggnaden** med dubbelklick.",
 		"HELP_GETTINGSTARTED_FIRSTCASTLE_TEXT_1@~2025-01-07 02:45:11": "**Slott** fungerar som befästa monument och inhyser **Militärkompanier**.",
-		"HELP_GETTINGSTARTED_FIRSTCASTLE_TEXT_2@~2025-01-11 23:50:16": "För att etablera ett slott börjar du med att bygga en **slottborg**. Detta gör att du kan skapa ditt första **Företag**",
+		"HELP_GETTINGSTARTED_FIRSTCASTLE_TEXT_2@~2025-01-11 23:50:16": "För att etablera ett slott börjar du med att bygga en **slottsborg**. Detta gör att du kan skapa ditt första **kompani**",
 		"HELP_GETTINGSTARTED_FIRSTCASTLE_TEXT_4@~2025-01-11 23:49:17": "Inom dess **Fortifikationsskydd**, bygg:",
 		"HELP_GETTINGSTARTED_FIRSTCASTLE_TEXT_5@~2025-01-11 23:50:40": "En **Barack** för att hysa dina **Stridande**",
 		"HELP_GETTINGSTARTED_FIRSTCASTLE_TEXT_6@~2025-01-11 23:51:11": "Ett **vapenförråd**, så att dina soldater kan utrusta sig med **vapen**"
