--- a/Foundation/sv/military.release.json
+++ b/Foundation/sv/military.release.json
@@ -5,41 +5,41 @@
 		"X_MILITARY_MISSIONS_AVAILABLE": "{1} uppdrag tillgängliga för din armé",
 		"X_MILITARY_MISSIONS_ONGOING": "{1} uppdrag pågår",
 		"NO_MISSION_IN_PROGRESS": "Inga uppdrag pågår.",
-		"PREPARE_MISSION@~2024-01-04 15:41:58": "Förbered företaget",
-		"START_MISSION@~2024-01-04 15:42:25": "Distribuera företag",
+		"PREPARE_MISSION@~2024-01-04 15:41:58": "Förbered kompani",
+		"START_MISSION@~2024-01-04 15:42:25": "Sätt in kompani",
 		"STRENGTH@~2024-04-09 13:44:55": "Styrka",
-		"STRENGTH_ABBREVIATED@~2024-03-15 15:14:23": "STR.",
+		"STRENGTH_ABBREVIATED@~2024-03-15 15:14:23": "STY.",
 		"CASUALTIES": "Förlust av liv",
 		"VICTORY": "Seger",
 		"SELECT_MISSION": "Inget uppdrag valt.",
-		"ADD_X_COMPANY@~2023-09-22 14:50:21": "Lägg till {1} Företag",
-		"COMPANY_X@~2023-09-26 18:05:25": "Företag {1}",
+		"ADD_X_COMPANY@~2023-09-22 14:50:21": "Lägg till {1}-kompani",
+		"COMPANY_X@~2023-09-26 18:05:25": "Kompani {1}",
 		"WAGE@~2023-12-01 20:57:47": "Lön",
 		"FAVORED_WEAPON@2025-01-14 22:58:01": "Favoritvapen:",
-		"PLEDGE_COMPANY@~2024-01-04 15:38:16": "Pantsätta ett företag",
+		"PLEDGE_COMPANY@~2024-01-04 15:38:16": "Be ett kompani",
 		"POSSIBLE_REWARDS@~2024-01-04 15:35:21": "Belöningar",
 		"CHALLENGE@~2024-01-04 15:36:12": "Utmaning",
-		"CALL_BACK_SOLDIERS@~2024-01-04 15:36:22": "Call Back-företag",
-		"CALL_BACK_SOLDIERS_CONFIRMATION@~2024-03-07 17:30:45": "Är du säker på att du vill ringa tillbaka till företaget?\n\nAtt överge ett uppdrag ger ingen belöning.",
+		"CALL_BACK_SOLDIERS@~2024-01-04 15:36:22": "Återkalla kompani",
+		"CALL_BACK_SOLDIERS_CONFIRMATION@~2024-03-07 17:30:45": "Är du säker på att du vill återkalla kompaniet?\n\nAtt överge ett uppdrag ger ingen belöning.",
 		"WEAPON@~2024-01-04 15:37:44": "Vapen",
-		"NO_COMPANY_AVAILABLE@~2024-01-04 15:37:47": "Inget företag tillgängligt",
+		"NO_COMPANY_AVAILABLE@~2024-01-04 15:37:47": "Inget kompani tillgängligt",
 		"DEPLOY_BATTALION@~2024-01-04 15:37:54": "Utplacera bataljon",
 		"ABANDON_CAMPAIGN@~2024-03-07 17:23:45": "Återinkallad bataljon",
 		"ABANDON_CAMPAIGN_CONFIRMATION@~2024-03-07 17:31:02": "Är du säker på att du vill kalla tillbaka bataljonen?\n\nAtt överge en kampanj ger bara det aktuella krigsbytet.",
 		"ASSEMBLE_A_BATTALION@~2024-01-04 15:40:06": "Samla bataljon",
-		"COMPANY@~2024-01-04 15:40:17": "Företag",
+		"COMPANY@~2024-01-04 15:40:17": "Kompani",
 		"BATTALION_LEFT@~2024-01-04 15:41:13": "Din bataljon åkte iväg på ett militärt fälttåg. För kungen!",
 		"NO_CAMPAIGN_AVAILABLE@~2024-03-18 20:24:59": "Ingen kampanj är tillgänglig för närvarande.\n\nVisa vad du går för på slagfältet; din kung kommer så småningom att bjuda in dig att strida vid hans sida!",
 		"CHANGE_COMPANY_WEAPON@2025-01-14 22:58:01": "Tilldela kvaliteten på företagets vapen. Om det inte finns fler vapen av denna kvalitet tillgängliga, kommer de stridande att utrusta sig med vapen av lägre kvalitet.",
 		"BACK_TO_COMPANY_LIST@~2024-01-04 15:48:49": "Tillbaka till listan",
-		"COMPANY_STATUS_WARNING_TITLE@~2024-01-30 22:37:53": "Bolaget är redo men har problem",
-		"COMPANY_PREFERRED_WEAPON_X@~2024-02-06 14:25:21": "Tilldelat vapen : {1}",
+		"COMPANY_STATUS_WARNING_TITLE@~2024-01-30 22:37:53": "Kompaniet är redo men har problem",
+		"COMPANY_PREFERRED_WEAPON_X@~2024-02-06 14:25:21": "Tilldelade vapen : {1}",
 		"COMPANY_BEHAVIOR_PATROL_DESCRIPTION@2025-01-14 22:58:01": "Patrullerande kompanier tillbringar sin arbetstid med att patrullera byn. De kan inte tilldelas uppdrag.",
 		"COMPANY_BEHAVIOR_MISSION_DESCRIPTION@~2024-01-30 23:18:00": "Kompanier med uppdragstjänstgöring ägnar sin arbetstid åt att förbereda sig för uppdrag. De kan bli uttagna till uppdrag men patrullerar inte i byn.",
-		"COMPANY_BOW@~2024-01-30 22:38:26": "Bow Company",
-		"COMPANY_SPEAR@~2024-01-30 22:38:29": "Spear Company",
-		"COMPANY_SWORD@~2024-01-30 22:38:31": "Svärdkompaniet",
-		"COMPANY_HOME@~2024-01-30 22:38:35": "Castle Company",
+		"COMPANY_BOW@~2024-01-30 22:38:26": "Bågkompani",
+		"COMPANY_SPEAR@~2024-01-30 22:38:29": "Spjutkompani",
+		"COMPANY_SWORD@~2024-01-30 22:38:31": "Svärdskompani",
+		"COMPANY_HOME@~2024-01-30 22:38:35": "Slottskompani",
 		"COMPANY_X_ON_THIS_MISSION_DAYS@~2024-04-11 21:16:16": "{1} bör vara tillbaka om några dagar.",
 		"COMPANY_X_ON_THIS_MISSION_WEEKS@~2024-04-11 21:16:14": "{1} bör vara tillbaka om några veckor.",
 		"COMPANY_X_ON_THIS_MISSION_MONTHS@~2024-04-11 21:16:11": "{1} bör vara tillbaka om några månader.",
@@ -54,7 +54,7 @@
 		"CURRENT_BATTALION@~2024-03-01 17:28:53": "Utplacerad bataljon",
 		"ONGOING_CAMPAIGN_STATS@~2024-03-01 19:04:59": "Bataljonens rapport",
 		"CURRENT_SPOIL_OF_WAR@~2024-03-01 18:58:42": "Nuvarande Krigsbyte",
-		"MIGHT_DESC|STRENGTH_DESC@2025-01-14 22:58:01": "Might är stridsförmågan hos ett kompani. Ju högre Might, desto lättare är det att lyckas med svåra uppdrag.\n\nMight baseras på kompaniets storlek samt på de stridandes styrka, lycka och träning.",
+		"MIGHT_DESC|STRENGTH_DESC@2025-01-14 22:58:01": "Mäktighet är stridsförmågan hos ett kompani. Ju högre Mäktighet, desto lättare är det att lyckas med svåra uppdrag.\n\nMäktighet baseras på kompaniets storlek samt på de stridandes styrka, lycka och träning.",
 		"SOLDIER_RANK_DESC|RANK_DESC@~2024-04-10 17:37:36": "Varje kombattant har en rang, som ökar deras styrka. Den baseras på erfarenhet och befordringar.\n\nRankerna ökar med tiden genom att du tjänar erfarenhet från uppdrag.\n\nNär en kombattant har nått sin högsta rang måste han eller hon befordras för att komma vidare.\n\n{1}",
 		"WEAPON_DESC|NEW_KEY@2025-01-14 22:58:01": "Kombattanter måste bära vapen för att vara effektiva under uppdrag.\n\nVapen har olika styrkor och är mer benägna att gå sönder om de hanteras av ineffektiva kombattanter.\n\nVapnets styrka: {1}",
 		"SOLDIER_HAPPINESS_DESC@~2024-04-08 15:03:05": "Combatants Happiness påverkar hur sannolikt det är att de klarar av uppdrag oskadda.",
@@ -67,19 +67,19 @@
 		"MAX_LEVEL_REACHED@~2024-04-10 17:38:12": "Denna kombattant har nått den högsta {1} rangen.",
 		"SOLDIER_STRENGTH@~2024-04-08 14:19:38": "Stridande styrka",
 		"SOLDIER_STRENGTH_DESC@~2024-04-08 14:24:10": "Styrka är en enskild stridande parts stridsförmåga.\n\nRang, vapenstyrka och träningsförhållanden förbättrar stridsdeltagarens styrka.",
-		"MIGHT@~2024-04-09 13:45:12": "Might",
-		"RANK_X@~2024-04-10 17:37:41": "Rank {1}",
+		"MIGHT@~2024-04-09 13:45:12": "Mäktighet",
+		"RANK_X@~2024-04-10 17:37:41": "Rang {1}",
 		"WAR_RATION_DESC@~2024-04-11 17:16:18": "Krigsransoner krävs för detta uppdrag.",
 		"MISSION_RISK_DESC@~2024-04-16 14:57:51": "Vapen kan gå sönder och kombattanter kanske inte återvänder från detta uppdrag.",
 		"MILITARY_GRADE_1_DESC@2025-01-14 22:58:01": "Ett militärkompani av 1:a graden består helt och hållet av milismän. Det kan endast utföra enkla uppdrag.\n\nFör att höja kompaniets grad ska du befordra minst en stridande till soldatstatus.",
-		"MILITARY_GRADE_2_DESC@2025-01-14 22:58:01": "Ett militärkompani av 2:a graden har minst en soldat. Det kan utföra mer givande uppdrag jämfört med 1st Grade.\n\nFör att höja kompaniets grad ska du befordra minst en stridande till riddare.",
+		"MILITARY_GRADE_2_DESC@2025-01-14 22:58:01": "Ett militärkompani av 2: a graden har minst en soldat. Det kan utföra mer givande uppdrag jämfört med 1: a graden.\n\nFör att höja kompaniets grad ska du befordra minst en stridande till riddare.",
 		"MILITARY_GRADE_3_DESC@~2024-05-07 18:47:06": "Ett militärkompani av 3:e graden har minst en riddare. Det kan utföra de mest belönande uppdragen.",
 		"MILITARY_GRADE_1_TITLE@~2024-05-07 18:50:21": "1:a klassens kompani",
 		"MILITARY_GRADE_2_TITLE@~2024-05-07 18:50:25": "2:a klassens kompani",
 		"MILITARY_GRADE_3_TITLE@~2024-05-07 18:50:30": "3:e klassens kompani",
-		"COMPANY_PLUR_STATUS_WARNING_TITLE|NEW_KEY@~2024-06-19 20:10:15": "Företagen är redo men har problem",
-		"SELECT_COMPANY@~2024-06-13 19:50:32": "Välj ett företag",
-		"SELECT_COMPANY_CAMPAIGN@~2024-06-13 19:50:54": "Välj flera företag",
+		"COMPANY_PLUR_STATUS_WARNING_TITLE|NEW_KEY@~2024-06-19 20:10:15": "Kompanier är redo men har problem",
+		"SELECT_COMPANY@~2024-06-13 19:50:32": "Välj ett kompani",
+		"SELECT_COMPANY_CAMPAIGN@~2024-06-13 19:50:54": "Välj flera kompanier",
 		"MILITARY_MISSION_GRADE_1_TITLE|MILITARY_MISSION_GRADE_1@~2024-06-19 20:13:19": "1:a klassens uppdrag",
 		"MILITARY_MISSION_GRADE_2_TITLE@~2024-06-19 20:13:21": "2:a klassens uppdrag",
 		"MILITARY_MISSION_GRADE_3_TITLE@~2024-06-19 20:13:25": "3:e klassens uppdrag",
@@ -98,13 +98,13 @@
 		"SOLDIERS_BETWEEN_CYCLE_FOR_FEW_MONTHS@2025-01-14 23:02:04": "Stridande återhämtar sig under några månader",
 		"COMBATANTS@~2024-09-09 18:50:09": "Kombattanter",
 		"ASSIGNED_COMPANIES_X_Y@~2024-11-07 22:04:14": "Tilldelade företag: {1}/{2}",
-		"MISSION_ASSIGNATION_ANY_COMPANY@~2024-11-07 22:16:33": "Tilldela valfri företagstyp",
-		"MISSION_ASSIGNATION_COMPANY_TYPE_X_REQUIRED@~2024-11-07 22:07:22": "Tilldela ett {1} företag",
+		"MISSION_ASSIGNATION_ANY_COMPANY@~2024-11-07 22:16:33": "Tilldela valfri kompanityp",
+		"MISSION_ASSIGNATION_COMPANY_TYPE_X_REQUIRED@~2024-11-07 22:07:22": "Tilldela ett {1}-kompani",
 		"NOTIFICATION_COMPANY_BACK_FROM_CYCLE@2025-01-14 22:58:01": "{1} är tillbaka från ett uppdrag med",
 		"FINISH_MISSION_X_TO_UNLOCK@~2024-10-24 13:57:46": "Avsluta {1} först för att låsa upp detta uppdrag.",
 		"MISSION_LOCKED@~2024-10-24 14:00:50": "Uppdraget låst",
-		"NO_COMPANY_SLOT_AVAILABLE_FOR_WEAPON@~2024-12-17 01:54:45": "Ingen tillgänglig Company Slot för detta företags vapentyp",
-		"NO_COMPANY_SLOT_AVAILABLE@~2024-12-17 01:54:41": "Ej tillgängligt Company Slot",
+		"NO_COMPANY_SLOT_AVAILABLE_FOR_WEAPON@~2024-12-17 01:54:45": "Ingen tillgänglig kompaniplats för detta kompanis vapentyp",
+		"NO_COMPANY_SLOT_AVAILABLE@~2024-12-17 01:54:41": "Ingen tillgänglig kompaniplats",
 		"BONUS_REWARD@~2024-11-07 22:23:12": "Prestationsbaserad belöning",
 		"PERFORMANCE@~2024-11-07 22:23:32": "Prestanda",
 		"SOLDIERS_SENT@~2024-11-07 22:35:56": "Dina kombattanter är utplacerade",
@@ -117,7 +117,7 @@
 		"COMPANY_BEHAVIOR_GUARD_DESCRIPTION@~2024-12-18 23:46:53": "Kompanier i vakttjänst tillbringar sin arbetstid med att bevaka befästningsbyggnader. De kan inte tilldelas uppdrag.",
 		"SOLDIERS_CONDITION|SOLDIERS_CONDITIONS@~2025-01-23 23:29:59": "Kombattanternas tillstånd:",
 		"PROGRESS_MISSION@~2025-01-23 23:31:43": "Kommer att utvecklas i uppdraget",
-		"MIGHT_RATING@~2025-01-24 16:26:15": "Might:",
+		"MIGHT_RATING@~2025-01-24 16:26:15": "Mäktighet:",
 		"SOLDIERS_HAPPINESS_RATING|SOLDIERS_HAPPINESS@~2025-01-24 16:26:17": "Lycka:",
 		"TRAINING_STATE_RATING|TRAINING_STATE@~2025-01-24 16:26:19": "Utbildning:",
 		"WAR_RATION_RATING@~2025-01-24 16:26:23": "Krigsransoner:",
@@ -137,9 +137,9 @@
 		"SOLDIER_STATUS_AVAILABLE": "Tillgängliga",
 		"SOLDIER_STATUS_ASSIGNED_TO_MISSION": "Tilldelad till uppdrag",
 		"SOLDIER_STATUS_ON_MISSION": "På ett uppdrag",
-		"COMPANY_STATUS_AVAILABLE@~2024-12-19 02:34:21": "Bolaget är redo och har inga problem",
-		"COMPANY_STATUS_ON_MISSION@2025-01-14 22:58:01": "Företaget är ute på ett uppdrag",
-		"COMPANY_STATUS_UNAVAILABLE@~2024-01-30 22:39:01": "Företaget är inte tillgängligt"
+		"COMPANY_STATUS_AVAILABLE@~2024-12-19 02:34:21": "Kompaniet är redo och har inga problem",
+		"COMPANY_STATUS_ON_MISSION@2025-01-14 22:58:01": "Kompaniet är ute på ett uppdrag",
+		"COMPANY_STATUS_UNAVAILABLE@~2024-01-30 22:39:01": "Kompaniet är inte tillgängligt"
 	},
 	"SOLDIER_STATE": {
 		"STATE": "Stat: {IMG1}",
@@ -215,11 +215,11 @@
 		"EVENT_KINGDOMWAR_OPPORTUNITY_DESC@~2023-10-30 19:02:57": "Er kung kräver att ni förbereder er för krig!",
 		"KINGDOMBOARD_T1_A_TITLE": "Strategisk patrullering",
 		"KINGDOMBOARD_T1_A_DESC": "Den förste konstapeln erbjuder en belöning i form av mynt till den som kan skicka ett kompani för att patrullera strategiska vägar som korsar dina marker.",
-		"KINGDOMBOARD_T2_A_TITLE": "Beast Begone",
+		"KINGDOMBOARD_T2_A_TITLE": "Försvinn odjur",
 		"KINGDOMBOARD_T2_A_DESC@2025-01-14 22:58:01": "Ett närliggande samhälle med bönder plågas av farliga djur. De erbjuder en del av sina varor till den som kan driva bort varelserna.",
 		"KINGDOMBOARD_T2_B_TITLE": "Skirmish-säsongen",
 		"KINGDOMBOARD_T2_B_DESC": "Flera bosättningar erbjuder en del av sin skörd till den som kan skicka soldater för att säkra deras mark.",
-		"KINGDOMBOARD_T2_C_TITLE": "Garrison Gig",
+		"KINGDOMBOARD_T2_C_TITLE": "Garnisonsjobb",
 		"KINGDOMBOARD_T2_C_DESC@2025-01-14 22:58:01": "Den förste konstapeln har brist på vakter till utposter nära er by. Hon lovar rättvis ersättning till alla krigare som är villiga att hjälpa till under en tid.",
 		"KINGDOMBOARD_T3_A_TITLE": "Eskort för konvoj",
 		"KINGDOMBOARD_T3_A_DESC": "Konvojer av köpmän är på väg genom en ökänt farlig del av riket. De kommer att dela med sig av vissa varor till den som kan garantera deras säkerhet.",
@@ -233,7 +233,7 @@
 		"KINGDOMBOARD_T4_B_DESC@2025-01-14 22:58:01": "Den kungliga armén avancerar djupt in i fiendeland, vilket öppnar nya möjligheter för räder mot byar som ryktas vara fulla av varor.",
 		"KINGDOMBOARD_T4_C_TITLE": "Fest på fortet",
 		"KINGDOMBOARD_T4_C_DESC": "Den förste konstapeln har ögonen på en rad fiendefort som är kända för att stå emot långa belägringar. Den som erövrar dem kan behålla förnödenheterna där inne.",
-		"KINGDOMBOARD_T4_D_TITLE": "Noble Rescue",
+		"KINGDOMBOARD_T4_D_TITLE": "Ädel räddning",
 		"KINGDOMBOARD_T4_D_DESC@2025-01-14 22:58:01": "En adelsman har tagits som gisslan av en bitter rival och utlovar en förmögenhet till den som kan befria honom. Saken är bara den att ingen vet vart han har förts."
 	},
 	"COMPANY_WARNINGS": {
@@ -245,7 +245,7 @@
 		"COMPANY_WARNING_UNTRAINED@~2024-04-16 15:49:09": "Minst en av kombattanterna är otränad",
 		"SOLDIER_WARNING_UNTRAINED_PATROL@~2024-04-25 20:23:48": "Stridande är inte fullt utbildad för patrullering",
 		"COMPANY_WARNING_UNTRAINED_PATROL@~2024-04-25 20:23:53": "Minst en kombattant är inte fullt utbildad för patrullering",
-		"SOLDIER_WARNING_LOW_HAPPINESS@~2024-04-16 15:49:13": "Stridande har mindre än {1}% ha ppiness",
-		"COMPANY_WARNING_LOW_HAPPINESS@~2024-04-16 15:49:20": "Minst en kombattant har mindre än {1}% Happiness"
+		"SOLDIER_WARNING_LOW_HAPPINESS@~2024-04-16 15:49:13": "Stridande har mindre än {1}% lycka",
+		"COMPANY_WARNING_LOW_HAPPINESS@~2024-04-16 15:49:20": "Minst en kombattant har mindre än {1}% lycka"
 	}
 }
