--- a/Foundation/sv/rules.release.json
+++ b/Foundation/sv/rules.release.json
@@ -1,6 +1,6 @@
 ﻿{
 	"RULE_MODIFIERS": {
-		"NEW_BAILIFF_MODIFIER@~2024-12-17 01:19:58": "Ny Bailiff Effect!",
+		"NEW_BAILIFF_MODIFIER@~2024-12-17 01:19:58": "Ny fogdeeffekt!",
 		"NEW_INFLUENCE_MODIFIER@~2024-12-17 01:20:01": "Ny inflytelseeffekt!",
 		"HAPPINESS_VILLAGERS_OVERRIDEN_X_VALUE@~2024-08-09 17:48:50": "Din befolknings lycka är inställd på {1}.",
 		"X_REPLENISH_DURATION_Y_MORE@~2024-08-09 17:48:16": "{1} förnyelse tar {2} mer tid.",
