--- a/Foundation/sv/unlockables.release.json
+++ b/Foundation/sv/unlockables.release.json
@@ -1,6 +1,6 @@
 ﻿{
 	"UNLOCKABLES": {
-		"TAVERN_ADDITIONAL_PARTS": "Tavernan Förfinad Arkitektur",
+		"TAVERN_ADDITIONAL_PARTS": "Tavern Refined Architecture",
 		"MONASTERY_STONE_SET": "Monastisk stenarkitektur",
 		"CHURCH_ADDITIONAL_RUSTIC_PARTS": "Rustik kyrkoarkitektur",
 		"WINE_PRODUCTION_SET": "Monastisk vinframställning",
@@ -18,7 +18,7 @@
 		"CANDLE_TECH": "Stearinljus Förbättring",
 		"CITY_FORTIFICATION@~2023-09-22 17:15:08": "Stadsbefästningar",
 		"SPEAR_WARFARE@~2024-01-12 16:44:39": "Spjutkrigföring",
-		"BOW_WARFARE@~2024-01-12 16:44:55": "Bow Warfare",
+		"BOW_WARFARE@~2024-01-12 16:44:55": "Bågkrigföring",
 		"SWORD_WARFARE@~2024-01-12 16:45:07": "Svärdkrigföring",
 		"UNLOCKABLE_CLOTHING_DESC@2025-01-14 23:02:04": "Låser upp produktionen av Common Clothes, en Goods-resurs.",
 		"UNLOCKABLE_EDICT_SLOT_DESC@~2024-07-15 18:09:17": "Låser upp en Edict-plats för din by.",
