--- a/Foundation/sv/village_aspirations.release.json
+++ b/Foundation/sv/village_aspirations.release.json
@@ -16,7 +16,7 @@
 		"VC_LABOR_COMMUNE_SUCCESS@2025-01-14 23:02:04": "När du passerar stadens Klocktorn kan du inte låta bli att känna stolthet. Med tiden har du förvandlat detta lilla livegenskap till en blomstrande by av fritt folk!"
 	},
 	"CONDITIONS": {
-		"WARN_FAIL_VC_PROSPEROUS_PRIORY_TITLE@~2024-03-18 19:54:31": "Maximal Bybefolkning",
+		"WARN_FAIL_VC_PROSPEROUS_PRIORY_TITLE@~2024-03-18 19:54:31": "Maximal bybefolkning",
 		"WARN_FAIL_VC_PROSPEROUS_PRIORY_DESC@~2024-03-18 19:56:14": "Du har nått den maximala bybefolkningen för din nuvarande Bysträvan. Accepteras en ny bybo kommer du Bysträvan att misslyckas.\n\nVill du fortsätta?"
 	}
 }
